# docudex-core

./: Cargo.toml
src/: config.rs  lib.rs  library.rs
