[package]
name = "docudex-core"
version = "0.1.0"
authors = ["Caelia R Chapin <crc@caelia.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"

[lib]
path = "src/lib.rs"

[[bin]]
name = "ddx"
path = "src/bin/ddx.rs"
